# task_manager

./: README.md  alembic.ini  pyproject.toml
task_manager/: config.py  main.py
task_manager/db/: database.py
task_manager/migrations/: env.py
